cmake_minimum_required(VERSION 3.23)
project(CP_5609_Lab2)

set(CMAKE_CXX_STANDARD 14)

add_executable(CP_5609_Lab2 WallH.h BoardObjectH.h VladPackManGame.cpp PlayerH.h Wall.cpp Player.cpp ListBoardObjectsH.h Cookie.cpp CookieH.h ListBoardObjects.cpp BoardH.h Board.cpp VectorBoardObjects.cpp VectorBoardObjects.h)
